--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="app">
+      <section class="first-section">
       <div class="header">
         <h1>real, no?</h1>
         <span> - by <a target="_blank" href="#">pinkdon</a></span>
@@ -26,9 +27,39 @@
         <div class="palette-color"><span id="color">#f2cc8f</span></div>
       </div>
       <div class="content">
-        <span>who are you when no one is watching?</span>
-        <img src="./1_apples.jpg" alt="" />
+        <div class="item">
+          <span>who are you when no one is watching?</span>
+          <img src="./con2-ruin_top.jpg" alt="who are you when no one is watching?" />
+        </div>
+        <div class="item">
+          <span>was i raised without love? </br>
+          or was i born unlovable?
+          </span>
+          <img src="./con3-duck.jpg" alt="was i raised without love? </br>
+          or was i born unlovable?" />
+        </div>
+        <div class="item">
+          <span>everytime people said i was pretty, i thought of everything ugly swarming beneath my cloths.</span>
+          <img src="./con1-apples.jpg" alt="everytime people said i was pretty, i thought of everything ugly swarming beneath my cloths." />
+        </div>
       </div>
+      </section>
+      <section class="second-section">
+        <div class="letter">
+          <div class="image-overlay">
+            <img src="./letter.jpg"/>
+          </div>
+          <span>
+            i only ever though <br/>
+            there were two types of loves <br/>
+            the kind you'd kill for <br/>
+            and the kind you'd die for. <br/>
+            but you, my darling, <br/>
+            you were the kind of love <br/>
+            i would die for <br/>
+          </span>
+        </div>
+      </section>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
